--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "type": "module",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
+    "jest": "^27.4.5",
+    "jest-esm-transformer": "^1.0.0",
     "serverless-offline": "^8.3.1"
   },
   "dependencies": {
