--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "start": "node ./src/infra/httpExpress.js",
     "test": "jest"
   },
   "devDependencies": {
@@ -15,6 +16,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "mysql2": "^2.3.3",
+    "node-fetch": "^3.1.0",
     "serverless-http": "^2.7.0"
   }
 }
